--- a/Desenvolvimento Front-End/src/index.css
+++ b/Desenvolvimento Front-End/src/index.css
@@ -1,23 +1,65 @@
-.menu{
-    width: 300px;
-    padding: 20px;
-    background-color: rgb(132, 189, 75);
+.menu-grande{
+    position: relative;
+    justify-content: end;
+    top: -20px;
+
 }
 
-.item{
+.menu{
+    transition: 0.3s;
+    width: 140px;
+    padding-top: 8px;
+    background-color: #fffbeb;
+    position: absolute;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 20px;
+    
+
+}
+
+.imagem{
+    width: 24px;
+    height: 24px; 
+    transition: 0.3s;   
+}
+
+.imagem-dep{
+    width: 32px;
+    height: 32px;
+    transition: 0.3s;
+}
+
+.menu.expandir{
+    height: auto;
+    width: 300px;
+    transition: .1s;  
+    padding: 8px 20px 16px 20px;
+    transition: 0.3s;
     font-size: 20px;
-    margin-bottom: 20px;
-    transition-duration: 0.3s;    
 }
 
 .text{
     margin-left: 10px;
 }
 
+.item{
+    font-size: 20px;
+    margin-bottom: 20px;
+    transition-duration: 0.3s;  
+    color: rgb(87, 87, 87);  
+}
+
+
+
+
+
 .item:hover{
     padding: 0px 10px;
     border-radius: 3px;
-    color: white;
+    color: black;
     transition-duration: 0.3s;
 }
+
+
 
